--- a/environments/k8s/job-template.yml
+++ b/environments/k8s/job-template.yml
@@ -20,12 +20,12 @@ spec:
                 fieldPath: metadata.name
         resources:
           requests:
-            nvidia.com/gpu: 1
-            cpu: "8"
+            nvidia.com/gpu: 4
+            cpu: "16"
             memory: "16Gi"
           limits:
-            nvidia.com/gpu: 1
-            cpu: "8"
+            nvidia.com/gpu: 4
+            cpu: "16"
             memory: "18Gi"
         volumeMounts:
           - name: dshm
@@ -42,6 +42,7 @@ spec:
                 values:
                 - NVIDIA-GeForce-RTX-4090
                 - NVIDIA-GeForce-RTX-3090
+                - NVIDIA-L40
       volumes:
       - name: dshm
         emptyDir:
